Finally working, no junit in pom.xml.